dns-host.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils-2
  namespace: kube-system
spec:
  containers:
    - name: dnsutils-2
      image: registry.k8s.io/e2e-test-images/agnhost:2.39
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
  tolerations:
    - effect: NoSchedule
      key: node-role.kubernetes.io/control-plane
      operator: Exists
  hostNetwork: true
  # dnsPolicy: ClusterFirstWithHostNet
  nodeSelector:
    kubernetes.io/os: linux
    node-role.kubernetes.io/control-plane: ""
